--- a/ios/AudioPlayer/AudioPlayer/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/ios/AudioPlayer/AudioPlayer/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="4">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller - Playlists-->
+        <!--Playlists-->
         <scene sceneID="8EJ-QS-CXj">
             <objects>
                 <navigationController definesPresentationContext="YES" id="2X7-Vo-HfY" sceneMemberID="viewController">
@@ -20,7 +20,7 @@
             </objects>
             <point key="canvasLocation" x="555" y="-517"/>
         </scene>
-        <!--Playlists View Controller - Playlists-->
+        <!--Playlists-->
         <scene sceneID="lDs-qY-Km8">
             <objects>
                 <tableViewController title="Playlists" id="mGz-hd-1CU" customClass="PlaylistsViewController" sceneMemberID="viewController">
@@ -33,7 +33,7 @@
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1Os-5n-qDp" id="f57-TL-Fzm">
-                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
@@ -66,7 +66,7 @@
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Xfe-Jz-pSX" id="esJ-UV-So4">
-                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
@@ -85,7 +85,7 @@
             </objects>
             <point key="canvasLocation" x="1349" y="-517"/>
         </scene>
-        <!--Navigation Controller - Songs-->
+        <!--Songs-->
         <scene sceneID="6en-sj-biL">
             <objects>
                 <navigationController definesPresentationContext="YES" id="dqG-rs-5qZ" sceneMemberID="viewController">
@@ -101,7 +101,7 @@
             </objects>
             <point key="canvasLocation" x="555" y="848"/>
         </scene>
-        <!--Albums View Controller - Albums-->
+        <!--Albums-->
         <scene sceneID="ltD-89-DZb">
             <objects>
                 <tableViewController title="Albums" id="M7z-Ne-MyC" customClass="AlbumsViewController" sceneMemberID="viewController">
@@ -114,7 +114,7 @@
                                 <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QC7-tb-dm7" id="emb-fD-PHN">
-                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
@@ -133,7 +133,7 @@
             </objects>
             <point key="canvasLocation" x="555" y="1517"/>
         </scene>
-        <!--Songs View Controller - Songs-->
+        <!--Songs-->
         <scene sceneID="nhb-dW-mwx">
             <objects>
                 <tableViewController title="Songs" id="8dZ-0N-Zw3" customClass="SongsViewController" sceneMemberID="viewController">
@@ -146,7 +146,7 @@
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XzX-NM-OcY" id="Z4g-s2-RVt">
-                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
@@ -166,7 +166,7 @@
             </objects>
             <point key="canvasLocation" x="957" y="848"/>
         </scene>
-        <!--Navigation Controller - Artists-->
+        <!--Artists-->
         <scene sceneID="Xri-eA-7AJ">
             <objects>
                 <navigationController definesPresentationContext="YES" id="6bR-KF-BN0" sceneMemberID="viewController">
@@ -182,7 +182,7 @@
             </objects>
             <point key="canvasLocation" x="555" y="180"/>
         </scene>
-        <!--Artists View Controller - Artists-->
+        <!--Artists-->
         <scene sceneID="19m-gl-sUQ">
             <objects>
                 <tableViewController title="Artists" id="1Ca-F7-Puo" customClass="ArtistsViewController" sceneMemberID="viewController">
@@ -195,7 +195,7 @@
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Oxh-o8-ZSZ" id="RCi-Ao-94S">
-                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
@@ -228,7 +228,7 @@
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IJn-XI-0VF" id="PRr-pi-qi8">
-                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
@@ -280,19 +280,19 @@
                                     <action selector="currentTimeSliderDidChanged:" destination="xjP-Xl-yT8" eventType="valueChanged" id="bCL-cI-Lt5"/>
                                 </connections>
                             </slider>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Rate:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ge7-af-AhS">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" misplaced="YES" text="Rate:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ge7-af-AhS">
                                 <rect key="frame" x="20" y="125" width="41" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="nMO-eq-FI1">
+                            <slider opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="nMO-eq-FI1">
                                 <rect key="frame" x="18" y="154" width="284" height="31"/>
                                 <connections>
                                     <action selector="rateSliderDidChanged:" destination="xjP-Xl-yT8" eventType="valueChanged" id="zWP-Eo-dXO"/>
                                 </connections>
                             </slider>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Amf-eo-iEY">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Amf-eo-iEY">
                                 <rect key="frame" x="58" y="20" width="33" height="30"/>
                                 <state key="normal" title="Stop">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -352,11 +352,6 @@
             <point key="canvasLocation" x="132" y="180"/>
         </scene>
     </scenes>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="OuU-C0-DsR"/>
     </inferredMetricsTieBreakers>
